--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Baracao</title>
+        <title>Baracao materiais para construções</title>
     </head>
     <body>
-        <h1>Sobre a Barbearia Alura</h1>
+        <h1>Baracão materiais para construções</h1>
 
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
         Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
