--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Baracao materiais para construções</title>
+        <title>Barracao materiais para construções</title>
     </head>
     <body>
-        <h1>Baracão materiais para construções</h1>
+        <h1>Barracão materiais para construções</h1>
 
-        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
+        <p>Localizado no coração da cidade o <strong>Barracão materias para construções</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
         Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
         <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
