--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <h1>Barracão materiais para construções</h1>
 
-        <p>Localizado no coração da cidade o <strong>Barracão materias para construções</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
-        Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-
-        <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+        <p>Localizado no coração da cidade o <strong>Barracão materias para construções</strong></p> 
+        <p>proprietario:Rafael cirino</p>
+        <p>telefone:995849123</p>
+        <p><em>Nossa missão é: <strong>"Proporcionar um otimo atendimento para os clientes"</strong>.</em></p>
 
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
         O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
