--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>telefone:995849123</p>
         <p><em>Nossa missão é: <strong>"Proporcionar um otimo atendimento para os clientes"</strong>.</em></p>
 
-        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
-        O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        <p>Oferecemos profissionais experientes e qualificados para o que quiser.</p> 
+        
     </body>
 </html>
