--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p><em>Nossa missão é: <strong>"Proporcionar um otimo atendimento para os clientes"</strong>.</em></p>
 
         <p>Oferecemos profissionais experientes e qualificados para o que quiser.</p> 
-        <p>o nosso objetivo e ajudar as pessoas na suas obras</p>
+        <p>o nosso objetivo e ajudar as pessoas na suas obras.</p>
         
     </body>
 </html>
